--- a/read-only-role.yaml
+++ b/read-only-role.yaml
@@ -1,7 +1,8 @@
-kind: ClusterRole
+kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: read-only-clusterrole
+  name: read-only-role
+  namespace: default
 rules:
   - nonResourceURLs:
       - /metrics
